change on widgets screen

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -159,7 +159,7 @@ body {
     box-sizing: border-box;
 }
 
-@media screen and ((min-width:2561px) and (max-width:3840px)) {
+/* @media screen and ((min-width:2561px) and (max-width:3840px)) {
     .heading1 {
         font-size: calc(30px * var(--multiplier-3840));
         line-height: calc(35px * var(--multiplier-3840));
@@ -190,7 +190,7 @@ body {
         width: calc(145px * var(--multiplier-3840));
         min-height: calc(54px * var(--multiplier-3840));
     }
-}
+} */
 
 @media screen and ((min-width:1921px) and (max-width:2560px)) {
     .heading1 {
