--- a/styles/calender.css
+++ b/styles/calender.css
@@ -58,6 +58,7 @@ header .current-date {
     list-style: none;
     text-align: center;
     padding: 0px !important;
+    margin: 0px;
 }
 
 .calendar .days {
@@ -76,7 +77,7 @@ header .current-date {
     color: #333;
     text-align: center;
     font-family: 'Work Sans';
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -87,7 +88,7 @@ header .current-date {
     color: #666;
     text-align: center;
     font-family: 'Work Sans';
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
